清理掉无用的适配兼容